apps/base/authentik/callback-ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-public
  namespace: apps
spec:
  ingressClassName: traefik-public
  tls:
    - hosts:
        - webui.harville.dev
        - isaiah.harville.dev
  rules:
    - host: webui.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: isaiah.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-internal
  namespace: apps
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - seaweedfs.int.harville.dev
        - flux.int.harville.dev
        - longhorn.int.harville.dev
        - grafana.int.harville.dev
  rules:
    - host: seaweedfs.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: flux.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: longhorn.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: grafana.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
